# testsite

./: .gitignore  Dockerfile  Not_a_docker_file  Procfile  Procfilee  db.sqlite3  error.txt  funcs.py  generate_sheet.py  nixpacks.toml  render.yaml  requirements.txt  requirements_old.txt  test.py  tickers.json
DataSheets/: BTEK_DataSheet  HYXF_DataSheet  HYXU_DataSheet  IAGG_DataSheet  IEFA_DataSheet  IEF_DataSheet  IEI_DataSheet  IEMG_DataSheet  IGIB_DataSheet  IGLB_DataSheet  IGSB_DataSheet  IJJ_DataSheet  IJK_DataSheet  IJS_DataSheet  IJT_DataSheet  IOO_DataSheet  IVE_DataSheet  IVW_DataSheet  IWX_DataSheet  IWY_DataSheet  IXN_DataSheet  REET_DataSheet  REZ_DataSheet  SGOV_DataSheet  SHY_DataSheet  TLH_DataSheet  TLT_DataSheet  USHY_DataSheet  USRT_DataSheet
Notes/: Collect  Design Notes  Home Notes  Portfolio Notes  Scarpe  note
about/: urls.py  views.py
about/static/: about.css  dropdown.js
about/templates/: about.html  about_old.html
collect/: urls.py  views.py
collect/functions/: error.txt  funcs.py  scrape copy.py  (+4 more)
home/: apps.py  urls.py
mysite/: pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/render/templates/render/: index.html
port/: apps.py  views.py
portfolio/: apps.py  models.py  urls.py  views.py  views2.py
quackers/: apps.py  urls.py  views.py
questions/: apps.py  urls.py  views.py
sliders/: apps.py  urls.py  views.py
static/: collect.ff3d294259ee.css  navbar.0a4029ce10f6.html  staticfiles.json  template.css
staticfiles/: all.css
template/: index.html
templates/: navbar.html
testsite/: settings.py  urls.py
(+23 files in other folders)
