[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Momothebowler <momothebowler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.0.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
